WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
294209
[macOS] Fullscreen animation looks incorrect on ign.com
https://bugs.webkit.org/show_bug.cgi?id=294209
Summary
[macOS] Fullscreen animation looks incorrect on ign.com
Jer Noble
Reported
2025-06-09 09:28:57 PDT
[macOS] Fullscreen animation looks incorrect on ign.com
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-06-09 09:28:58 PDT
<
rdar://problem/152181188
>
Jer Noble
Comment 2
2025-06-09 11:06:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46507
EWS
Comment 3
2025-06-17 13:05:05 PDT
Committed
296331@main
(71cbb1ee223b): <
https://commits.webkit.org/296331@main
> Reviewed commits have been landed. Closing PR #46507 and removing active labels.
WebKit Commit Bot
Comment 4
2025-07-09 13:42:20 PDT
Re-opened since this is blocked by
bug 295654
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug