[macOS] Fullscreen animation looks incorrect on ign.com rdar://152181188 https://bugs.webkit.org/show_bug.cgi?id=294209

Reviewed by Eric Carlson.

IGN.com requests fullscreen on an element whose height is explicitly zero, and with an absolute
positioned child. screenRectOfContents() would return a zero-height rect, and this would cause
the fullscreen animation to start and end at the wrong visual position.

Update screenRectOfContents() to use paintingRootRect() rather than screenRect().

* LayoutTests/fullscreen/fullscreen-zero-height-element-with-non-zero-children-expected.txt: Added.
* LayoutTests/fullscreen/fullscreen-zero-height-element-with-non-zero-children.html: Added.
* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::screenRectOfContents):
(WebKit::WebFullScreenManager::enterFullScreenForElement):
(WebKit::WebFullScreenManager::willEnterFullScreen):
(WebKit::WebFullScreenManager::willExitFullScreen):

Canonical link: https://commits.webkit.org/296331@main